leaderboard: fix text spacing

--- a/src/components/leaderboard/Leaderboard.css
+++ b/src/components/leaderboard/Leaderboard.css
@@ -6,3 +6,9 @@
     background-color: #fff;
     text-align: center;
 }
+
+.leaderboard-text {
+    display: flex;
+    justify-content: space-between;
+    max-width: 90%;
+}
